# gelly

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  justfile  update_po.sh  update_po_full.sh
.github/workflows/: rust.yml
package/: RELEASE_CHECKLIST.md
package/arch/: PKGBUILD
package/flatpak/: io.m51.Gelly.yml
package/nixos/: package.nix
po/: LINGUAS  POTFILES.in  ca.po  cs.po  de.po  es.po  et.po  fa.po  fr.po  gelly.pot  hu.po  it.po  ko.po  nl.po  oc.po  pl.po  pt_BR.po  ru.po  uk.po  zh_Hans.po
resources/: io.m51.Gelly.desktop  io.m51.Gelly.gschema.xml  io.m51.Gelly.metainfo.xml  resources.gresource.xml  style.css
resources/ui/: album.ui  album_art.ui  album_detail.ui  album_list.ui  artist.ui  artist_detail.ui  artist_list.ui  big_player.ui  ellipsize_dropdown_factory.ui  lyrics.ui  media_card.ui  mini_player_bar.ui  now_playing.ui  playback_mode.ui  player_bar.ui  playlist.ui  playlist_detail.ui  playlist_list.ui  preferences.ui  queue.ui  server_form.ui  setup.ui  shortcuts_dialog.ui  song.ui  song_list.ui  volume_button.ui  window.ui
resources/ui/player_bar/: big_player.ui  compact_player_bar.ui  full_player_bar.ui  mini_player.ui
src/: application.rs  async_utils.rs  backend.rs  cache.rs  cli.rs  config.rs  i18n.rs  library.rs  library_utils.rs  main.rs  secret.rs  tray.rs
src/application/: imp.rs  mod.rs
src/audio/: mod.rs  model.rs  mpris.rs  player.rs  stream_info.rs
src/jellyfin/: api.rs  mod.rs  utils.rs
src/models/: album_data.rs  album_model.rs  artist_model.rs  mod.rs  model_traits.rs  playlist_model.rs  playlist_type.rs  song_data.rs  song_model.rs
src/reporting/: jellyfin.rs  mod.rs  mpris.rs
src/subsonic/: api.rs  mod.rs
src/ui/: about_dialog.rs  album.rs  album_art.rs  album_art_background.rs  album_detail.rs  album_list.rs  artist.rs  artist_detail.rs  artist_list.rs  auto_scroll_window.rs  big_player.rs  drag_scrollable.rs  image_utils.rs  list_helpers.rs  lyrics.rs  media_card.rs  media_traits.rs  mini_player_bar.rs  mod.rs  music_context_menu.rs  now_playing.rs  page_traits.rs  playback_mode.rs  player_bar.rs  player_controls_trait.rs  playlist.rs  playlist_detail.rs  playlist_dialogs.rs  playlist_list.rs  playlist_new_dialog.rs  preferences.rs  queue.rs  server_form.rs  setup.rs  shortcuts_dialog.rs  song.rs  song_list.rs  song_utils.rs  stream_info_dialog.rs  volume_button.rs  (+2 more)
src/ui/player_bar/: big_player.rs  common.rs  compact_player_bar.rs  full_player_bar.rs  mini_player.rs  mini_player_bar.rs  mod.rs
src/ui/server_form/: imp.rs  mod.rs
src/ui/window/: imp.rs  mod.rs
