[package]
name = "gelly"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk = { version = "0.10.1", package = "gtk4", features = ["v4_20"] }
adw = { version = "0.8.0", package = "libadwaita", features = ["v1_8"] }
log = { version = "0.4.28", features = ["std"] }
env_logger = { version = "0.11.8", features = ["color"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "sync"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde_json = { version = "1.0.143", features = ["std"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.16"
gdk-pixbuf = { version = "0.21.2", features = ["v2_42"] }
gstreamer = { version = "0.24.2", features = ["v1_26"] }
async-channel = "2.5.0"
futures-util = "0.3.31"
mpris-server = "0.9.0"
dbus-secret-service = "4.1.0"

[build-dependencies]
glib-build-tools = "0.21.0"
